force-app/main/default/objects/Ramp_Lookup_Reference__c/Ramp_Lookup_Reference__c.object-meta.xml
<CustomObject>
    <description>Admin-maintained VLOOKUP table: a unique Reference key maps to default field values stamped onto Ramp card-transaction Journal Entry Lines at import.</description>
    <label>Ramp Lookup Reference</label>
    <pluralLabel>Ramp Lookup References</pluralLabel>
    <nameField>
        <displayFormat>RLR-{00000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>