force-app/main/default/objects/Ramp_Lookup_Reference__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Ramp Lookup References</relationshipLabel>
    <relationshipName>Ramp_Lookup_References</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>