force-app/main/default/objects/Ramp_Lookup_Reference__c/fields/GL_Account__c.field-meta.xml
<CustomField>
    <fullName>GL_Account__c</fullName>
    <label>GL Account</label>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipLabel>Ramp Lookup References</relationshipLabel>
    <relationshipName>Ramp_Lookup_References</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>