force-app/main/default/objects/Ramp_Lookup_Reference__c/fields/GL_Account_Variable_1__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable_1__c</fullName>
    <label>GL Account Variable 1</label>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Ramp Lookup References</relationshipLabel>
    <relationshipName>Ramp_Lookup_References_GLAV1</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Select a GL Account Variable of type &quot;GL Account Variable 1&quot;.</errorMessage>
        <filterItems>
            <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>GL Account Variable 1</value>
        </filterItems>
        <infoMessage>Only GL Account Variable 1 records are shown.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
</CustomField>