force-app/main/default/objects/Ramp_Lookup_Reference__c/fields/Override__c.field-meta.xml
<CustomField>
    <fullName>Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this row force-overwrites every field it specifies on the Journal Entry Line, including GL Account. When unchecked, attribution fields overwrite but GL Account is only filled when blank.</description>
    <inlineHelpText>Checked: this row's values overwrite everything it specifies on the matched Journal Entry Line, including the GL Account from Ramp's coding. Unchecked: Vendor, Employee, GL Variables, Project, Project Task, and Product overwrite, but GL Account is set only when the line has none.</inlineHelpText>
    <label>Override</label>
    <type>Checkbox</type>
</CustomField>