force-app/main/default/objects/Ramp_Lookup_Reference__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Ramp Lookup References</relationshipLabel>
    <relationshipName>Ramp_Lookup_References</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>