force-app/main/default/objects/Ramp_Lookup_Reference__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Ramp Lookup References</relationshipLabel>
    <relationshipName>Ramp_Lookup_References</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>