force-app/main/default/objects/Ramp_Lookup_Reference__c/fields/Project_Task__c.field-meta.xml
<CustomField>
    <fullName>Project_Task__c</fullName>
    <label>Project Task</label>
    <referenceTo>AcctSeed__Project_Task__c</referenceTo>
    <relationshipLabel>Ramp Lookup References</relationshipLabel>
    <relationshipName>Ramp_Lookup_References</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The selected Project Task does not belong to the chosen Project.</errorMessage>
        <filterItems>
            <field>AcctSeed__Project_Task__c.AcctSeed__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <infoMessage>Only Project Tasks belonging to the selected Project are shown.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
</CustomField>