force-app/main/default/objects/Ramp_Lookup_Reference__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Unique lookup key. The computed Reference on a Journal Entry Line is matched against this value (case-insensitive) to pull in default field values.</description>
    <externalId>true</externalId>
    <label>Reference</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>