force-app/main/default/objects/Ramp_Lookup_Reference__c/validationRules/GLAV1_Type_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>GLAV1_Type_Validation</fullName>
    <active>true</active>
    <description>Ensures GL Account Variable 1 is of type GL Account Variable 1.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(GL_Account_Variable_1__c)), GL_Account_Variable_1__r.AcctSeed__Type__c &lt;&gt; "GL Account Variable 1")</errorConditionFormula>
    <errorDisplayField>GL_Account_Variable_1__c</errorDisplayField>
    <errorMessage>GL Account Variable 1 must be of type GL Account Variable 1.</errorMessage>
</ValidationRule>