force-app/main/default/objects/Ramp_Lookup_Reference__c/validationRules/GLAV2_Type_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>GLAV2_Type_Validation</fullName>
    <active>true</active>
    <description>Ensures GL Account Variable 2 is of type GL Account Variable 2.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(GL_Account_Variable_2__c)), GL_Account_Variable_2__r.AcctSeed__Type__c &lt;&gt; "GL Account Variable 2")</errorConditionFormula>
    <errorDisplayField>GL_Account_Variable_2__c</errorDisplayField>
    <errorMessage>GL Account Variable 2 must be of type GL Account Variable 2.</errorMessage>
</ValidationRule>