force-app/main/default/objects/Ramp_Lookup_Reference__c/validationRules/GLAV4_Type_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>GLAV4_Type_Validation</fullName>
    <active>true</active>
    <description>Ensures GL Account Variable 4 is of type GL Account Variable 4.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(GL_Account_Variable_4__c)), GL_Account_Variable_4__r.AcctSeed__Type__c &lt;&gt; "GL Account Variable 4")</errorConditionFormula>
    <errorDisplayField>GL_Account_Variable_4__c</errorDisplayField>
    <errorMessage>GL Account Variable 4 must be of type GL Account Variable 4.</errorMessage>
</ValidationRule>