force-app/main/default/objects/Ramp_Lookup_Reference__c/validationRules/Project_Task_Project_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Task_Project_Mismatch</fullName>
    <active>true</active>
    <description>Ensures the selected Project Task belongs to the chosen Project.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Project_Task__c)), NOT(ISBLANK(Project__c)), Project_Task__r.AcctSeed__Project__c &lt;&gt; Project__c)</errorConditionFormula>
    <errorDisplayField>Project_Task__c</errorDisplayField>
    <errorMessage>The selected Project Task does not belong to the chosen Project.</errorMessage>
</ValidationRule>