force-app/main/default/objects/Ramp_Lookup_Reference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name</columns>
    <columns>Reference__c</columns>
    <columns>GL_Account__c</columns>
    <columns>GL_Account_Variable_1__c</columns>
    <columns>GL_Account_Variable_2__c</columns>
    <columns>GL_Account_Variable_3__c</columns>
    <columns>GL_Account_Variable_4__c</columns>
    <columns>Override__c</columns>
    <columns>Employee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allUsers/>
    </sharedTo>
</ListView>